# itcr-courses

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
CE1101 - INTRODUCTION TO PROGRAMMING/: stackrecursion_1.py  stackrecursion_2.py  tailrecursion_1.py  tailrecursion_2.py
CE1101 - INTRODUCTION TO PROGRAMMING/stack recursion/: 1.CuentaRegresiva.py  10.Fibonacci.py  11.sumatoria.py  12.1.primos2.py  12.primos.py  13.suma_listas.py  14.valormin_listas.py  15.valormax_listas.py  16.sumaraices_listas.py  17.primos_listas.py  18.invertir_listas.py  19.comparanum_lambda.py  2.SumaDigitos.py  20.comparanumpares_lambda.py  21.cerosenlista_lambda.py  22.elementospositivos_lambda.py  (+9 more)
CE1103 - ALGORITHMS AND DATA STRUCTURES I/: README.md
CE2103 - ALGORITHMS AND DATA STRUCTURES II/: README.md
CE2103 - ALGORITHMS AND DATA STRUCTURES II/Important_Material/Linear_Data_Structures/: CMakeLists.txt  main.cpp
CE2103 - ALGORITHMS AND DATA STRUCTURES II/Important_Material/Linear_Data_Structures/linkedList/: LinkedListInterface.cpp  LinkedListInterface.h  List.cpp  List.h
CE2103 - ALGORITHMS AND DATA STRUCTURES II/Important_Material/Linear_Data_Structures/queue/: Queue.cpp  Queue.h  QueueInterface.cpp  QueueInterface.h  QueueItem.cpp  QueueItem.h
CE2103 - ALGORITHMS AND DATA STRUCTURES II/Important_Material/LinkedList/: CMakeLists.txt  List.cpp  List.h  Node.cpp  Node.h  main.cpp
CE3101 - DATABASES/: README.md
CE3102 - NUMERICAL ANALYSIS FOR ENGINEERING/: README.md
CE4101 - SOFTWARE SPECIFICATION AND DESIGN/: README.md
CE5508 - SOFTWARE ARCHITECTURE/: README.md
(+137 files in other folders)
